--- a/src/main/resources/public/html/templates/login-form-template.html
+++ b/src/main/resources/public/html/templates/login-form-template.html
@@ -1,7 +1,7 @@
-<form>
+<form ng-submit="$ctrl.login()">
     <md-input-container class="md-block">
         <label>email</label>
-        <input type="text" ng-model="$ctrl.email">
+        <input type="email" ng-model="$ctrl.email">
     </md-input-container>
 
     <md-input-container class="md-block">
@@ -10,7 +10,7 @@
     </md-input-container>
 
     <div layout="row" layout-align="center">
-        <md-button class="md-raised" type="submit" ng-click="$ctrl.login()">login</md-button>
-        <md-button class="md-raised md-primary" ng-click="$ctrl.register()">register</md-button>
+        <md-button class="md-raised" type="submit">login</md-button>
+        <md-button class="md-raised md-primary" ng-click="$ctrl.toggleRegister()">register</md-button>
     </div>
 </form>
