made register own view. added authenication services and interceptors.

--- a/src/main/resources/public/html/templates/login-form-template.html
+++ b/src/main/resources/public/html/templates/login-form-template.html
@@ -12,6 +12,6 @@
 
     <div layout="row" layout-align="center">
         <md-button class="md-raised" type="submit">login</md-button>
-        <md-button class="md-raised md-primary" ng-click="$ctrl.toggleRegister()">register</md-button>
+        <md-button class="md-raised md-primary" ui-sref="register">register</md-button>
     </div>
 </form>
