--- a/src/main/resources/public/html/views/register.html
+++ b/src/main/resources/public/html/views/register.html
@@ -3,7 +3,9 @@
         <h2>Audio Bucket</h2>
     </md-toolbar>
 
+    <md-button ui-sref="login">login</md-button>
+
     <section layout="row" layout-align="center">
-        <login-form></login-form>
+        <register-form></register-form>
     </section>
 </md-content>
