--- a/src/main/resources/public/html/views/register.html
+++ b/src/main/resources/public/html/views/register.html
@@ -1,6 +1,6 @@
 <md-content layout-padding>
     <md-toolbar layout="row" layout-align="center">
-        <h2>Audio Bucket</h2>
+        <h2 class="md-display-1">Audio Bucket</h2>
     </md-toolbar>
 
     <md-button ui-sref="login">login</md-button>
