fixed logging in and added toast for errors.

--- a/src/main/resources/public/html/views/profile.html
+++ b/src/main/resources/public/html/views/profile.html
@@ -1,6 +1,6 @@
 <md-toolbar layout-padding layout="row">
     <h2 class="md-display-1">Profile</h2>
-    <md-button layout-align="end center" ng-click="ProfileCtrl.logout()">logout</md-button>
+    <md-button layout-padding layout-align="end center" ng-click="ProfileCtrl.logout()">logout</md-button>
 </md-toolbar>
 
 <md-content>
