--- a/src/main/resources/public/html/templates/user-toolbar.html
+++ b/src/main/resources/public/html/templates/user-toolbar.html
@@ -9,7 +9,7 @@
                     <md-icon md-font-icon="menu">menu</md-icon>
                 </md-button>
             </md-fab-trigger>
-
+            
             <md-toolbar>
                 <md-fab-actions class="md-toolbar-tools">
                     <md-button aria-label="all_out" ng-click="$ctrl.logout()">
@@ -19,6 +19,10 @@
                     <md-button aria-label="settings">
                         <md-icon md-font-icon="icon-settings">settings</md-icon>
                         <span>account settings</span>
+                    </md-button>
+                    <md-button aria-label="account_box">
+                        <md-icon md-font-icon="icon-account-box">account_box</md-icon>
+                        <span>edit profile</span>
                     </md-button>
                 </md-fab-actions>
             </md-toolbar>
