--- a/src/main/resources/public/html/templates/albums.html
+++ b/src/main/resources/public/html/templates/albums.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<md-content>
+    <div>Hello from Albums!</div>
+</md-content>
