--- a/src/main/resources/public/html/templates/login-form-template.html
+++ b/src/main/resources/public/html/templates/login-form-template.html
@@ -1,17 +1,20 @@
+<div layout="column" layout-align="space-around center">
+    <h2 class="md-display-1">Login</h2>
 
-<form ng-submit="$ctrl.login()" id="login-form">
-    <md-input-container class="md-block">
-        <label>email</label>
-        <input type="email" ng-model="$ctrl.email">
-    </md-input-container>
+    <form ng-submit="$ctrl.login()" id="login-form">
+        <md-input-container class="md-block">
+            <label>email</label>
+            <input type="email" ng-model="$ctrl.email">
+        </md-input-container>
 
-    <md-input-container class="md-block">
-        <label>password</label>
-        <input type="password" ng-model="$ctrl.password">
-    </md-input-container>
+        <md-input-container class="md-block">
+            <label>password</label>
+            <input type="password" ng-model="$ctrl.password">
+        </md-input-container>
 
-    <div layout="row" layout-align="center">
-        <md-button class="md-raised" type="submit">login</md-button>
-        <md-button class="md-raised md-primary" ui-sref="register">register</md-button>
-    </div>
-</form>
+        <div layout="row" layout-align="center">
+            <md-button class="md-raised" type="submit">login</md-button>
+            <md-button class="md-raised md-primary" ui-sref="register">register</md-button>
+        </div>
+    </form>
+</div>
