--- a/src/main/resources/public/html/views/login.html
+++ b/src/main/resources/public/html/views/login.html
@@ -1,5 +1,5 @@
 <md-content layout-padding>
-    <md-toolbar layout="row" layout-align="center">
+    <md-toolbar layout="row">
         <h2 class="md-display-1">Audio Bucket</h2>
     </md-toolbar>
 
