--- a/src/main/resources/public/js/components/tracks-form/tracks-form.html
+++ b/src/main/resources/public/js/components/tracks-form/tracks-form.html
@@ -36,4 +36,7 @@
             </div>
         </div>
     </form>
+    <!--<audio-track></audio-track>-->
+
 </div>
+<audio-player track="{'url': 'assets/bolero.mp3', 'type': 'audio/mp3', 'name': 'Bolero'}"></audio-player>
