updated track card and created component for tab content.

--- a/src/main/resources/public/html/views/profile.html
+++ b/src/main/resources/public/html/views/profile.html
@@ -33,13 +33,16 @@
 <md-content>
     <md-tabs md-dynamic-height md-border-bottom>
         <md-tab label="tracks">
-            <tracks-form></tracks-form>
+            <tracks-tab-content></tracks-tab-content>
         </md-tab>
         <md-tab label="albums">
             <albums></albums>
         </md-tab>
         <md-tab label="following">
             <followers></followers>
+        </md-tab>
+        <md-tab label="favorites">
+            <div>Favorite tracks go here.</div>
         </md-tab>
     </md-tabs>
 </md-content>
