--- a/src/main/resources/public/js/components/tracks-tab-content/tracks-tab-content.html
+++ b/src/main/resources/public/js/components/tracks-tab-content/tracks-tab-content.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<div>
+    <tracks-form></tracks-form>
+    <track-card track="{'url': 'assets/bolero.mp3', 'type': 'audio/mp3', 'name': 'Bolero', 'album': 'El Miguel', 'artist': 'Don Miguel'}"></track-card>
+</div>
 
-</body>
-</html>
