--- a/src/main/resources/public/js/components/tracks-tab-content/tracks-tab-content.html
+++ b/src/main/resources/public/js/components/tracks-tab-content/tracks-tab-content.html
@@ -1,5 +1,16 @@
-<div>
-    <tracks-form></tracks-form>
-    <track-card track="{'url': 'assets/bolero.mp3', 'type': 'audio/mp3', 'name': 'Bolero', 'album': 'El Miguel', 'artist': 'Don Miguel'}"></track-card>
+<div layout-padding>
+    <md-button ng-click="$ctrl.toggleTrackForm()">
+        <md-icon class="icon-add" ng-hide="$ctrl.showTrackForm">add</md-icon>
+        <span ng-hide="$ctrl.showTrackForm">add track</span>
+        <span ng-show="$ctrl.showTrackForm">cancel</span>
+    </md-button>
+    <tracks-form ng-show="$ctrl.showTrackForm"></tracks-form>
+
+    <div layout="row">
+        <div layout="column" flex="66">
+            <track-card flex="60" flex-offset="40"
+                        track="{'url': 'assets/bolero.mp3', 'type': 'audio/mp3', 'name': 'Bolero', 'album': 'El Miguel', 'artist': 'Don Miguel'}"></track-card>
+        </div>
+    </div>
 </div>
 
