changed save button to apply

--- a/src/main/resources/public/html/templates/edit-profile-dialog.html
+++ b/src/main/resources/public/html/templates/edit-profile-dialog.html
@@ -40,7 +40,7 @@
                 </md-button>
                 <input type="file" id="image-input" style="display: none;">
                 <span flex></span>
-                <md-button ng-click="$ctrl.save()">save</md-button>
+                <md-button ng-click="$ctrl.save()">apply</md-button>
             </div>
 
 
