--- a/src/main/resources/public/js/components/track-card/track-card.html
+++ b/src/main/resources/public/js/components/track-card/track-card.html
@@ -27,6 +27,10 @@
                     favorite_border
                 </md-icon>
             </md-button>
+            <md-button class="md-icon-button">
+                <md-tooltip md-direction="right">download</md-tooltip>
+                <md-icon class="icon-file-download">file_download</md-icon>
+            </md-button>
         </md-card-actions>
     </md-card-title>
 </md-card>
