--- a/src/main/resources/public/js/components/audio-player/audio-player.html
+++ b/src/main/resources/public/js/components/audio-player/audio-player.html
@@ -1,42 +1,50 @@
 <md-toolbar layout-align="space-around center">
-    <div layout="row" layout-align="space-between center">
-        <div class="md-toolbar-tools">
-            <md-icon class="icon-volume-down">volume_down</md-icon>
-            <md-slider-container>
-                <md-slider min="0" max="1" step=".01" ng-model="$ctrl.audio.volume"></md-slider>
-            </md-slider-container>
-        </div>
-        <div layout="column">
+    <div layout="column">
+        <div layout="row" layout-align="space-between center">
             <div class="md-toolbar-tools">
-                <md-button class="md-icon-button" ng-click="$ctrl.replayThirtySeconds()">
-                    <md-tooltip md-direction="left">replay 30</md-tooltip>
-                    <md-icon class="icon_replay_30">replay_30</md-icon>
-                </md-button>
-                <md-button class="md-icon-button" ng-click="$ctrl.replayTenSeconds()">
-                    <md-tooltip md-direction="left">replay 10</md-tooltip>
-                    <md-icon class="icon_replay_10">replay_10</md-icon>
-                </md-button>
-                <md-button class="md-icon-button" ng-hide="$ctrl.isPlaying" ng-click="$ctrl.play()">
-                    <md-icon class="icon_play_arrow">play_arrow</md-icon>
-                </md-button>
-                <md-button class="md-icon-button" ng-show="$ctrl.isPlaying" ng-click="$ctrl.pause()">
-                    <md-icon class="icon_pause">pause</md-icon>
-                </md-button>
-                <md-button class="md-icon-button" ng-click="$ctrl.forwardTenSeconds()">
-                    <md-tooltip md-direction="right">forward 10</md-tooltip>
-                    <md-icon class="icon_forward_10">forward_10</md-icon>
-                </md-button>
-                <md-button class="md-icon-button" ng-click="$ctrl.forwardThirtySeconds()">
-                    <md-tooltip md-direction="right">forward 30</md-tooltip>
-                    <md-icon class="icon_forward_30">forward_30</md-icon>
-                </md-button>
+                <md-icon class="icon-volume-up" ng-show="$ctrl.audio.volume >= .8">volume_up</md-icon>
+                <md-icon class="icon-volume-down" ng-show="$ctrl.audio.volume > .2 && $ctrl.audio.volume < .8">
+                    volume_down
+                </md-icon>
+                <md-icon class="icon-volume-mute" ng-show="$ctrl.audio.volume < .2">volume_mute</md-icon>
+
+                <md-slider-container>
+                    <md-slider min="0" max="1" step=".01" ng-model="$ctrl.audio.volume" aria-label="volume"></md-slider>
+                </md-slider-container>
             </div>
-        </div>
-        <div class="md-toolbar-tools">
-            <md-slider-container>
-                <md-slider min="0" max="144" id="track-time" ng-model="$ctrl.audio.currentTime"></md-slider>
-            </md-slider-container>
-            <h6>{{ $ctrl.audio.currentTime | secondsToTimeFormat | date:'HH:mm:ss'}}</h6>
+            <div layout="column">
+                <div class="md-toolbar-tools">
+                    <md-button class="md-icon-button" ng-click="$ctrl.replayThirtySeconds()">
+                        <md-tooltip md-direction="left">replay 30</md-tooltip>
+                        <md-icon class="icon_replay_30">replay_30</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" ng-click="$ctrl.replayTenSeconds()">
+                        <md-tooltip md-direction="left">replay 10</md-tooltip>
+                        <md-icon class="icon_replay_10">replay_10</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" ng-hide="$ctrl.isPlaying" ng-click="$ctrl.play()">
+                        <md-icon class="icon_play_arrow">play_arrow</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" ng-show="$ctrl.isPlaying" ng-click="$ctrl.pause()">
+                        <md-icon class="icon_pause">pause</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" ng-click="$ctrl.forwardTenSeconds()">
+                        <md-tooltip md-direction="right">forward 10</md-tooltip>
+                        <md-icon class="icon_forward_10">forward_10</md-icon>
+                    </md-button>
+                    <md-button class="md-icon-button" ng-click="$ctrl.forwardThirtySeconds()">
+                        <md-tooltip md-direction="right">forward 30</md-tooltip>
+                        <md-icon class="icon_forward_30">forward_30</md-icon>
+                    </md-button>
+                </div>
+            </div>
+            <div class="md-toolbar-tools">
+                <md-slider-container>
+                    <md-slider md-discrete min="0" max="144" id="track-time"
+                               aria-label="track-time" ng-model="$ctrl.audio.currentTime"></md-slider>
+                </md-slider-container>
+                <h6>{{ $ctrl.audio.currentTime | secondsToTimeFormat | date:'HH:mm:ss'}}</h6>
+            </div>
         </div>
     </div>
 </md-toolbar>
