--- a/src/main/resources/public/js/components/tracks-tab-content/tracks-tab-content.html
+++ b/src/main/resources/public/js/components/tracks-tab-content/tracks-tab-content.html
@@ -8,9 +8,10 @@
 
     <div layout="row">
         <div layout="column" flex="66">
-            <track-card flex="60" flex-offset="40"
-                        track="{'url': 'assets/bolero.mp3', 'type': 'audio/mp3', 'name': 'Bolero', 'album': 'El Miguel', 'artist': 'Don Miguel'}"></track-card>
+            <track-card ng-repeat="track in $ctrl.tracks" flex="60" flex-offset="40"
+                        track=track></track-card>
         </div>
     </div>
 </div>
+<audio-player track=$ctrl.tracks[0]></audio-player>
 
