--- a/src/main/resources/public/html/views/profile.html
+++ b/src/main/resources/public/html/views/profile.html
@@ -33,7 +33,7 @@
 <md-content>
     <md-tabs md-dynamic-height md-border-bottom>
         <md-tab label="tracks">
-            <tracks-tab-content></tracks-tab-content>
+            <tracks-tab-content artist="ProfileCtrl.artist"></tracks-tab-content>
         </md-tab>
         <md-tab label="albums">
             <albums></albums>
