--- a/src/main/resources/public/js/components/profile/profile.html
+++ b/src/main/resources/public/js/components/profile/profile.html
@@ -1,10 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<user-toolbar></user-toolbar>
 
-</body>
-</html>
+<!--component-->
+<md-card>
+    <div layout="row" layout-align="center">
+        <md-card-title>
+            <md-card-title-media>
+                <div class="md-media-xl card-media">
+                    <img src="assets/sacredGeometry.jpeg">
+                </div>
+            </md-card-title-media>
+            <md-card-title-text>
+                <div layout="row" layout-align="space-around">
+                    <div layout="column" flex="55">
+                        <div class="md-headline">Bio</div>
+                        <div>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
+                            velit..."
+                            "There is no one who loves pain itself, who seeks after it and wants to have it, simply
+                            because it is pain..."
+                        </div>
+                    </div>
+
+                    <div layout="column" flex="30">
+                        <div class="md-headline">Genre</div>
+                        <div class="md-subhead">Rock/Alternative/Ambient/Experimental/Jazz</div>
+                    </div>
+                </div>
+            </md-card-title-text>
+        </md-card-title>
+    </div>
+</md-card>
+
+<md-content>
+    <md-tabs md-dynamic-height md-border-bottom>
+        <md-tab label="tracks">
+            <tracks-tab-content ng-if="$ctrl.artist" artist="$ctrl.artist"></tracks-tab-content>
+        </md-tab>
+        <md-tab label="albums">
+            <albums></albums>
+        </md-tab>
+        <md-tab label="following">
+            <followers></followers>
+        </md-tab>
+        <md-tab label="favorites">
+            <div>Favorite tracks go here.</div>
+        </md-tab>
+    </md-tabs>
+</md-content>
