adding upsert for PUT request for Artists.

--- a/src/main/resources/public/js/components/profile/profile.html
+++ b/src/main/resources/public/js/components/profile/profile.html
@@ -1,6 +1,6 @@
 <user-toolbar></user-toolbar>
 
-<!--component-->
+<!--component (will be used later)-->
 <md-card>
     <div layout="row" layout-align="center">
         <md-card-title>
@@ -30,6 +30,7 @@
     </div>
 </md-card>
 
+<!--Make component?-->
 <md-content>
     <md-tabs md-dynamic-height md-border-bottom>
         <md-tab label="tracks">
