added artist attribute for profile image url and removed hardcoded url in profile.html

--- a/src/main/resources/public/js/components/profile/profile.html
+++ b/src/main/resources/public/js/components/profile/profile.html
@@ -10,7 +10,7 @@
         <md-card-title>
             <md-card-title-media>
                 <div class="md-media-xl card-media">
-                    <img src="assets/sacredGeometry.jpeg">
+                    <img src="{{$ctrl.artist.profileImageUrl}}">
                 </div>
             </md-card-title-media>
             <md-card-title-text>
